k8s/preproduction/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projection-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - preprod.projection.finance
      secretName: projection-web-preprod-tls
  rules:
    - host: preprod.projection.finance
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: projection-web
                port:
                  number: 80
